--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="ml-auto navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link aboutus-link" data-toggle="collapse" data-target="#navbarNav">About us
+              <a class="nav-link aboutus-link" data-toggle="collapse" data-target=".navbar-collapse.show">About us
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link product-link" data-toggle="collapse" data-target="#navbarNav" href="#">Product</a>
+              <a class="nav-link product-link" data-toggle="collapse" data-target=".navbar-collapse.show" href="#">Product</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link apps-link" data-toggle="collapse" data-target="#navbarNav" href="#">Apps</a>
+              <a class="nav-link apps-link" data-toggle="collapse" data-target=".navbar-collapse.show" href="#">Apps</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link preorder-link" data-toggle="collapse" data-target="#navbarNav" href="#">Preorder</a>
+              <a class="nav-link preorder-link" data-toggle="collapse" data-target=".navbar-collapse.show" href="#">Preorder</a>
             </li> 
             <li class="nav-item">
               <a class="nav-link" href="#">Login</a>
@@ -121,7 +121,7 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid section-three">
+    <div class="container-fluid section-three" style="max-width: 1200px;">
       <div class="row">
         <div class="col-3 tac">
           <img class="img-fluid bee-img" alt='bee' src='./images/homebee.png' />
@@ -141,7 +141,7 @@
       <br/>
     </div>
     <div id="product" class="element">
-      <div class="container-fluid section-four">
+      <div class="container-fluid section-four" style="max-width: 1200px;">
         <div class="container">
           <div class="row">
             <div class="col-md-4 col-12">
@@ -161,7 +161,7 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid section-three">
+    <div class="container-fluid section-three" style="max-width: 1200px;">
       <div class="row">
         <div class="col-3">
           <img class="img-fluid bee-img " alt='bee' src='./images/homebee.png' />
@@ -177,14 +177,14 @@
       <br/>
       <br/>
     </div>
-    <div class="container-fluid">
+    <div class="container-fluid" style="max-width: 1200px;"> 
       <div class="row">
         <div class="col-12">
           <img class="img-fluid" alt='app preview' src='./images/sec4.png' />
         </div>
       </div>
     </div>
-    <div class="container-fluid section-six">
+    <div class="container-fluid section-six" style="max-width: 1200px;">
       <h2 class='tac'>Tracking data is much easier</h2>
       <br/>
       <p class='tac'>Imagine monitoring your bees in the comfort of your home or office</p>
@@ -204,7 +204,7 @@
       </div>
     </div>
     <div id="apps" class="element">
-      <div class="container-fluid section-seven">
+      <div class="container-fluid section-seven" style="max-width: 1200px;">
         <br/>
         <br/>
         <h3 class='tac'>Download habeetat iOS or Android App</h3>
@@ -237,7 +237,7 @@
         </div>
       </div>
     </div>
-    <div class='container-fluid section-nine'>
+    <div class='container-fluid section-nine' style="max-width: 1200px;">
       <br/>
       <div class='row'>
         <div class='col-12 col-lg-1'>
