--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link preorder-link" data-toggle="collapse" data-target=".navbar-collapse.show" href="#">Preorder</a>
-            </li> 
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Login</a>
             </li>
@@ -61,8 +61,12 @@
             <div class="col-sm-10 col-12">
               <h1 style='color: #fff'>Sensor Enhanced Beehives</h1>
               <br/>
-              <p class='col-10' style='color: #ddd'>We're building a global network of citizen scientist to discover the reason bee populations are declining troughout
-                the world.</p>
+              <p class='col-12' style='color: #ddd'>We're building a global network of citizen scientists to discover the reason why bee populations are declining
+                throughout the world. Keep track of your hive's weight - both by frame and in total. You can track the inner
+                and outer temperature and humidity. Discover which locations are best for your bees. Set notifications for
+                everything. Get notified on time when a beehive is ready for harvesting or when it becomes too cold for bees.
+                Inspect your beehives and save images of each frame using our mobile app. Get insight on how your colonies
+                are developing throughout time. Get in touch with other beekeepers, connect with them and exchange experiences.</p>
               <br/>
               <br/>
               <button style='position: absolute; bottom: -2rem' class="btn btn-warning">PREORDER NOW
@@ -79,9 +83,9 @@
             <div class="col-md-3 col-sm-6 col-12">
               <h4 class="tac">Hardware & Data</h4>
               <br/>
-              <img class="img-fluid cih aboutus-img" alt='beehive' src="./images/sec1.png" />
+              <img class="img-fluid cih aboutus-img" alt='beehive' src="./images/sec2-1.png" />
               <br/>
-              <p>
+              <p style="text-align: justify">
                 Keep track of your hive weight, frame by frame and total. You can track inner and outside temperature and humidity too. Know
                 which locations are best for your bees.
               </p>
@@ -91,7 +95,7 @@
               <br/>
               <img class="img-fluid cih aboutus-img" alt='notifications' src='./images/sec2-2.png' />
               <br/>
-              <p>
+              <p style="text-align: justify">
                 Set notifications for everything. Get notified on time when beehive is ready for harvesting or when it becomes too cold for
                 bees.
               </p>
@@ -103,7 +107,7 @@
               <br/>
               <img class="img-fluid cih aboutus-img" alt='honeycomb' src='./images/sec2-3.png' />
               <br/>
-              <p>
+              <p style="text-align: justify">
                 Inspect your beehives and save images of each frame using our mobile app. Get insight of how your colonies are developing
                 through time.
               </p>
@@ -113,7 +117,7 @@
               <br/>
               <img class="img-fluid cih aboutus-img" alt='beekeeper' src='./images/sec2-4.png' />
               <br/>
-              <p>
+              <p style="text-align: justify">
                 Get involved with other beekeepers, connect with them and exchange experiences.
               </p>
             </div>
@@ -148,10 +152,10 @@
               <img class="img-fluid" alt='device' src='./images/sec3.png' />
             </div>
             <div class="col-md-8 col-xs-12">
-              <h2 class='tac'>Habeetat device</h2>
+              <h2 class='tac'>HaBEEtat device</h2>
               <br/>
-              <p>Habeetat device feature scales for every frame individually, inner and outer temperature and humidity sensors
-                and 3g internet connection. You get data every day and batteries can hold up to year without replacement.
+              <p style="text-align: justify">The HaBEEtat device features scales for each individual frame, inner and outer temperature and humidity sensors,
+                and a 3G internet connection. You get data each day and the batteries can last for up to a year without replacement.
                 It's made with care and consideration for what bees are already used to. Bees will love it!</p>
               <br/>
               <br/>
@@ -177,7 +181,7 @@
       <br/>
       <br/>
     </div>
-    <div class="container-fluid" style="max-width: 1200px;"> 
+    <div class="container-fluid" style="max-width: 1200px;">
       <div class="row">
         <div class="col-12">
           <img class="img-fluid" alt='app preview' src='./images/sec4.png' />
@@ -185,9 +189,9 @@
       </div>
     </div>
     <div class="container-fluid section-six" style="max-width: 1200px;">
-      <h2 class='tac'>Tracking data is much easier</h2>
+      <h2 class='tac'>Tracking data is much easier!</h2>
       <br/>
-      <p class='tac'>Imagine monitoring your bees in the comfort of your home or office</p>
+      <p class='tac'>Imagine monitoring your bees from the comfort of your home or office.</p>
       <div class="row">
         <div class="col-12 img-lg">
           <img class="img-fluid cih" alt='step by step app' src='./images/sec5.png' />
@@ -207,9 +211,9 @@
       <div class="container-fluid section-seven" style="max-width: 1200px;">
         <br/>
         <br/>
-        <h3 class='tac'>Download habeetat iOS or Android App</h3>
+        <h3 class='tac'>Download the HaBEEtat iOS or Android App</h3>
         <br/>
-        <p class='tac'>Instant access to your data & measurements where you need them</p>
+        <p class='tac'>Instant access to your data & measurements whenever you need them!</p>
         <br/>
         <div class="row">
           <div class="col-2">
@@ -232,24 +236,36 @@
           </div>
           <br/>
           <br/>
-          <h5 class='col-12 tac'>Available on Web too.</h5>
+          <h5 class='col-12 tac'>Available via desktop.</h5>
           <br/>
         </div>
       </div>
     </div>
-    <div class='container-fluid section-nine' style="max-width: 1200px;">
-      <br/>
+    <div id="preorder" class="element">
+      <div class="container-fluid section-eigth">
+        <br/>
+        <br/>
+        <h4>We are now taking preorders for 2019 Habeetat Hives</h4>
+        <br/>
+        <br/>
+        <button class="btn btn-warning">PREORDER NOW</button>
+        <br />
+        <br />
+        <br />
+      </div>
+    </div>
+    <div class='container-fluid section-nine' style="max-width: 1200px; padding-top:1em; padding-bottom: 1em;">
       <div class='row'>
-        <div class='col-12 col-lg-1'>
+        <div class='col-12 col-lg-1' style="display: flex; align-items: center">
           <img style='max-height: 50px' class="img-fluid cih" alt='logo' src='./images/hublogo.png' />
         </div>
-        <br/>
-        <div class='col-12 col-lg-3 tac'>
-          <span>&copy; 2017 Habeetat.co - All Rights Reserved</span>
-          <br/>
-          <span>Made with &#10084; in Sarajevo.</span>
-          <br/>
-          <br/>
+        <div class='col-12 col-lg-3 tac' style="display: flex; align-items: center; justify-content: center;">
+          <div>
+            <span>&copy; 2017 Habeetat.co - All Rights Reserved</span>
+            </br>
+            <span>Made with
+              <span style="color:red">&#10084;</span> in Sarajevo.</span>
+          </div>
         </div>
         <div class='col-12 col-lg-6 offset-lg-2 footer-links' style='display: flex; justify-content: space-between'>
           <a class="aboutus-link">Home</a>
