--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <a class="nav-link preorder-link" data-toggle="collapse" data-target=".navbar-collapse.show" href="#">Preorder</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Login</a>
+              <a class="nav-link" target="_blank" href="http://v2.habeetat.io/login">Login</a>
             </li>
           </ul>
         </div>
@@ -63,11 +63,7 @@
               <h1 style='color: #fff'>Sensor Enhanced Beehives</h1>
               <br/>
               <p class='col-12' style='color: #ddd'>We're building a global network of citizen scientists to discover the reason why bee populations are declining
-                throughout the world. Keep track of your hive's weight - both by frame and in total. You can track the inner
-                and outer temperature and humidity. Discover which locations are best for your bees. Set notifications for
-                everything. Get notified on time when a beehive is ready for harvesting or when it becomes too cold for bees.
-                Inspect your beehives and save images of each frame using our mobile app. Get insight on how your colonies
-                are developing throughout time. Get in touch with other beekeepers, connect with them and exchange experiences.</p>
+                throughout the world.</p>
               <br/>
               <br/>
               <button style='position: absolute; bottom: -2rem' class="btn btn-warning">PREORDER NOW
@@ -150,7 +146,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-4 col-12">
-              <img class="img-fluid" alt='device' src='./images/sec3.png' />
+              <img class="img-fluid" alt='device' src='./images/habeetat-device.png' />
             </div>
             <div class="col-md-8 col-xs-12">
               <h2 class='tac'>HaBEEtat device</h2>
