--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-10 col-12">
-              <h1 style='color: #fff'>Sensor Enhanced Beehives</h1>
+              <h1 style='color: #fff'>Sensor <strong>Enhanced</strong> Beehives</h1>
               <br/>
+              <div class="col-md-8">
               <p class='col-12' style='color: #ddd'>We're building a global network of citizen scientists to discover the reason why bee populations are declining
                 throughout the world.</p>
+              </div>
               <br/>
               <br/>
               <button style='position: absolute; bottom: -2rem' class="btn btn-warning">PREORDER NOW
@@ -146,10 +148,10 @@
         <div class="container">
           <div class="row">
             <div class="col-md-4 col-12">
-              <img class="img-fluid" alt='device' src='./images/habeetat-device.png' />
+              <img class="img-fluid device" alt='device' src='./images/habeetat-device.png' />
             </div>
             <div class="col-md-8 col-xs-12">
-              <h2 class='tac'>HaBEEtat device</h2>
+              <h2 class='tac' style="color: #000">ha<span style="color:#ffc107">bee</span>tat device</h2>
               <br/>
               <p style="text-align: justify">The HaBEEtat device features scales for each individual frame, inner and outer temperature and humidity sensors,
                 and a 3G internet connection. You get data each day and the batteries can last for up to a year without replacement.
@@ -185,16 +187,15 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid section-six" style="max-width: 1200px;">
+    <div class="container-fluid section-six">
       <h2 class='tac'>Tracking data is much easier!</h2>
-      <br/>
       <p class='tac'>Imagine monitoring your bees from the comfort of your home or office.</p>
       <div class="row">
-        <div class="col-12 img-lg">
-          <img class="img-fluid cih" alt='step by step app' src='./images/sec5.png' />
+        <div class="col-12 img-lg p-0">
+          <img class="img-fluid tracking-img" alt='step by step app' src='./images/bg_tracking_1.png' />
           <br/>
         </div>
-        <div class="col-12 img-xs">
+        <div class="col-12 img-xs" style="max-width: 1200px;">
           <img class="img-fluid cih" alt='install' src='./images/img_install.png' />
           <p class='tac'>Install</p>
           <img class="img-fluid cih" alt='gather data' src='./images/img_gatherdata.png' />
@@ -208,10 +209,8 @@
       <div class="container-fluid section-seven" style="max-width: 1200px;">
         <br/>
         <br/>
-        <h3 class='tac'>Download the HaBEEtat iOS or Android App</h3>
-        <br/>
-        <p class='tac'>Instant access to your data & measurements whenever you need them!</p>
-        <br/>
+        <h3 class='tac'>Download the ha<span style="color:#ffc107">bee</span>tat iOS or Android App</h3>
+        <h4 class='tac'>Instant access to your data & measurements whenever you need them!</h4>
         <div class="row">
           <div class="col-2">
             <img class="img-fluid bee-img" alt='bee' src='./images/homebee.png' />
@@ -233,7 +232,7 @@
           </div>
           <br/>
           <br/>
-          <h5 class='col-12 tac'>Available via desktop.</h5>
+          <h5 class='col-12 tac'>Available on Web too.</h5>
           <br/>
         </div>
       </div>
@@ -242,7 +241,7 @@
       <div class="container-fluid section-eigth">
         <br/>
         <br/>
-        <h4>We are now taking preorders for 2019 Habeetat Hives</h4>
+        <h4>We are now taking preorders for 2019 ha<span style="color:#ffc107">bee</span>tat Hives</h4>
         <br/>
         <br/>
         <button class="btn btn-warning">PREORDER NOW</button>
@@ -254,7 +253,7 @@
     <div class='container-fluid section-nine' style="max-width: 1200px; padding-top:1em; padding-bottom: 1em;">
       <div class='row'>
         <div class='col-12 col-lg-1' style="display: flex; align-items: center">
-          <img style='max-height: 50px' class="img-fluid cih" alt='logo' src='./images/hublogo.png' />
+          <img style='max-height: 50px' class="img-fluid cih" alt='logo' src='./images/logoheadersmall.png' />
         </div>
         <div class='col-12 col-lg-3 tac' style="display: flex; align-items: center; justify-content: center;">
           <div>
@@ -264,7 +263,7 @@
               <span style="color:red">&#10084;</span> in Sarajevo.</span>
           </div>
         </div>
-        <div class='col-12 col-lg-6 offset-lg-2 footer-links' style='display: flex; justify-content: space-between'>
+        <div class='col-12 col-lg-4 offset-lg-4 footer-links' style='display: flex; justify-content: space-between'>
           <a class="aboutus-link">Home</a>
           <a class="aboutus-link">About Us</a>
           <a class="product-link">Product</a>
