align home header

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="col-sm-10 col-12">
               <h1 style='color: #fff'>Sensor <strong>Enhanced</strong> Beehives</h1>
               <br/>
-              <div class="col-md-8">
+              <div class="col-md-8 p-0">
               <p class='col-12' style='color: #ddd'>We're building a global network of citizen scientists to discover the reason why bee populations are declining
                 throughout the world.</p>
               </div>
