--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <a class="nav-link preorder-link" data-toggle="collapse" data-target=".navbar-collapse.show" href="#">Preorder</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" target="_blank" href="http://v2.habeetat.io/login">Login</a>
+              <a class="nav-link" target="_blank" href="http://dashboard.habeetat.io/login">Login</a>
             </li>
           </ul>
         </div>
