--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         </div>
         <div class='col-12 col-lg-4 tac' style="display: flex; align-items: center; justify-content: center;">
           <div>
-            <span>&copy; 2017 Habeetat.co - All Rights Reserved</span>
+            <span>&copy; 2018 Ha<span style="color:#ffc107">bee</span>tat.io - All Rights Reserved</span>
             </br>
             <span>Made with
               <span style="color:red">&#10084;</span> in Sarajevo.</span>
