--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <a class="navbar-brand" href="#">
           <img style='width: 120px' className="" alt='logo' src="./images/logoheader.png" />
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-          aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+          aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -60,14 +60,15 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-10 col-12">
-              <h1 style='color: #fff'>Sensor <strong>Enhanced</strong> Beehives</h1>
-              <br/>
+              <h1 style='color: #fff; text-shadow: 2px 1px #696969'><strong>Beehive With Digital Eyes And Ears That
+                  Works!</strong></h1>
+              <br />
               <div class="col-md-8 p-0">
-              <p class='col-12' style='color: #ddd'>We're building a global network of citizen scientists to discover the reason why bee populations are declining
-                throughout the world.</p>
+                <p class='col-12' style='color: #fff; text-shadow: 1px 1px #696969; font-size: 2em'>Monitor and track your beehive
+                  conditions important to bee’s “well being” and optimal honey production.</p>
               </div>
-              <br/>
-              <br/>
+              <br />
+              <br />
               <button style='position: absolute; bottom: -2rem' class="btn btn-warning">PREORDER NOW
               </button>
             </div>
@@ -81,43 +82,47 @@
           <div class="row">
             <div class="col-md-3 col-sm-6 col-12">
               <h4 class="tac">Hardware & Data</h4>
-              <br/>
+              <br />
               <img class="img-fluid cih aboutus-img" alt='beehive' src="./images/sec2-1.png" />
-              <br/>
+              <br />
               <p style="text-align: justify">
-                Keep track of your hive weight, frame by frame and total. You can track inner and outside temperature and humidity too. Know
-                which locations are best for your bees.
+                Habeetat “Smart Frame” is first adjustable hardware component design for standard Longhorne beehive
+                integrated with web and mobile app that provide beekeepers with most important data points inside a
+                single beehive.
               </p>
             </div>
             <div class="col-md-3 col-sm-6 col-12">
               <h4 class="tac">Notifications</h4>
-              <br/>
+              <br />
               <img class="img-fluid cih aboutus-img" alt='notifications' src='./images/sec2-2.png' />
-              <br/>
+              <br />
               <p style="text-align: justify">
-                Set notifications for everything. Get notified on time when beehive is ready for harvesting or when it becomes too cold for
-                bees.
+                It’s connectivity trough Wi-Fi and GSM protocols enables real time monitoring capabilities so modern
+                beekeepers are able to optimize their operations, decrease costs and reduce colony loses (!).
               </p>
             </div>
-            <br/>
-            <br/>
+            <br />
+            <br />
             <div class="col-md-3 col-sm-6 col-12">
               <h4 class="tac">Inspection</h4>
-              <br/>
+              <br />
               <img class="img-fluid cih aboutus-img" alt='honeycomb' src='./images/sec2-3.png' />
-              <br/>
+              <br />
               <p style="text-align: justify">
-                Inspect your beehives and save images of each frame using our mobile app. Get insight of how your colonies are developing
+                Inspect your beehives and save images of each frame using our mobile app. Get insight of how your
+                colonies are developing
                 through time.
               </p>
             </div>
             <div class="col-md-3 col-sm-6 col-12">
               <h4 class="tac">Community</h4>
-              <br/>
+              <br />
               <img class="img-fluid cih aboutus-img" alt='beekeeper' src='./images/sec2-4.png' />
-              <br/>
+              <br />
               <p style="text-align: justify">
-                Get involved with other beekeepers, connect with them and exchange experiences.
+                Regardless if you are just new or proven beekeeper, HABEETAT is an open online community which help you
+                to
+                connect with other beekeepers, exchange experiences and best practices.
               </p>
             </div>
           </div>
@@ -139,25 +144,38 @@
           <img class="img-fluid bee-img" alt='bee' src='./images/homebee.png' />
         </div>
       </div>
-      <br/>
-      <br/>
-      <br/>
+      <br />
+      <br />
+      <br />
     </div>
     <div id="product" class="element">
       <div class="container-fluid section-four" style="max-width: 1200px;">
         <div class="container">
           <div class="row">
             <div class="col-md-4 col-12">
-              <img class="img-fluid device" alt='device' src='./images/habeetat-device.png' />
+              <img class="img-fluid device" style="margin-top:4em" alt='device' src='./images/habeetat-device-new.jpg' />
             </div>
             <div class="col-md-8 col-xs-12">
-              <h2 class='tac' style="color: #000">ha<span style="color:#ffc107">bee</span>tat device</h2>
-              <br/>
-              <p style="text-align: justify">The HaBEEtat device features scales for each individual frame, inner and outer temperature and humidity sensors,
-                and a 3G internet connection. You get data each day and the batteries can last for up to a year without replacement.
-                It's made with care and consideration for what bees are already used to. Bees will love it!</p>
-              <br/>
-              <br/>
+              <h2 class='tac' style="color: #000">ha<span style="color:#ffc107">bee</span>tat smart frame</h2>
+              <br />
+              <p style="text-align: justify">Core of HABBETAT solution is fully integrated hardware and software
+                beehive system for digital beekeeping in 21st century. Its aim is to fully track all vital health and
+                productivity metrics of bee colony. Once installed on your standard Longhorne beehive and activated,
+                HaBEEtat “Smart Frame” measures and stores all key data points such as: temperature, humidity and
+                unlike any other solutions, individual frame weight. With HaBEEtat “Smart Frame” you can convert
+                traditional Longhorne beehives into smart beehive instantly. HaBEEtat is first technical solution that
+                provides single frame measurement and data collection.
+                <br />
+                <br />
+                HaBEEtat mission is to enable more efficient honey production and improve well-being of bees population
+                by creating first centralized online platform for worlds beekeepers interoperable with hardware
+                component (smart i-beehive) through real time monitoring and data analysis. Our core objective is to
+                offer technology solution accessible to wide audience and demographics, especially targeting younger
+                generations initiating their interest in beekeeping activities. We strive to promote new perspective to
+                traditional beekeeping by introducing first mobile application and fully integrated web solution.
+                Hardware component together with online applications, both for web and mobile, are created to be
+                extremely simple to use and user friendly</p>
+              <br />
               <!-- <button class="btn btn-warning">OPEN GALLERY</button> -->
             </div>
           </div>
@@ -176,9 +194,9 @@
           <img class="img-fluid bee-img float-right" alt='bee' src='./images/homebee.png' />
         </div>
       </div>
-      <br/>
-      <br/>
-      <br/>
+      <br />
+      <br />
+      <br />
     </div>
     <div class="container-fluid" style="max-width: 1200px;">
       <div class="row">
@@ -193,7 +211,7 @@
       <div class="row">
         <div class="col-12 img-lg p-0">
           <img class="img-fluid tracking-img" alt='step by step app' src='./images/bg_tracking_1.png' />
-          <br/>
+          <br />
         </div>
         <div class="col-12 img-xs" style="max-width: 1200px;">
           <img class="img-fluid cih" alt='install' src='./images/img_install.png' />
@@ -207,8 +225,8 @@
     </div>
     <div id="apps" class="element">
       <div class="container-fluid section-seven" style="max-width: 1200px;">
-        <br/>
-        <br/>
+        <br />
+        <br />
         <h3 class='tac'>Download the ha<span style="color:#ffc107">bee</span>tat iOS or Android App</h3>
         <h4 class='tac'>Instant access to your data & measurements whenever you need them!</h4>
         <div class="row">
@@ -230,20 +248,20 @@
           <div class="col-2 offset-8">
             <img class="img-fluid bee-img float-right" alt='bee' src='./images/homebee.png' />
           </div>
-          <br/>
-          <br/>
+          <br />
+          <br />
           <h5 class='col-12 tac'>Available on Web too.</h5>
-          <br/>
+          <br />
         </div>
       </div>
     </div>
     <div id="preorder" class="element">
       <div class="container-fluid section-eigth">
-        <br/>
-        <br/>
+        <br />
+        <br />
         <h4>We are now taking preorders for 2019 ha<span style="color:#ffc107">bee</span>tat Hives</h4>
-        <br/>
-        <br/>
+        <br />
+        <br />
         <button class="btn btn-warning">PREORDER NOW</button>
         <br />
         <br />
@@ -270,8 +288,8 @@
           <a class="apps-link">Apps</a>
           <a class="preorder-link">Preorder</a>
         </div>
-        <br/>
-        <br/>
+        <br />
+        <br />
       </div>
     </div>
   </div>
