changes for sweden

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <a class="nav-link preorder-link" data-toggle="collapse" data-target=".navbar-collapse.show" href="#">Preorder</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" target="_blank" href="http://dashboard.habeetat.io/login">Login</a>
+              <a class="nav-link" target="_blank" href="https://dev.habeetat.io/login">Login</a>
             </li>
           </ul>
         </div>
@@ -57,15 +57,15 @@
     </header>
     <div id="aboutus" class="element">
       <div class="container-fluid section-one">
-        <div class="container">
+        <div class="container-fluid p-4">
           <div class="row">
             <div class="col-sm-10 col-12">
-              <h1 style='color: #fff; text-shadow: 2px 1px #696969'><strong>Beehive With Digital Eyes And Ears That
+              <h1 style='text-shadow: 2px 1px #696969'><strong>Beehive With Digital Eyes And Ears That
                   Works!</strong></h1>
               <br />
-              <div class="col-md-8 p-0">
-                <p class='col-12' style='color: #fff; text-shadow: 1px 1px #696969; font-size: 2em'>Monitor and track your beehive
-                  conditions important to bee’s “well being” and optimal honey production.</p>
+              <div class="col-md-8 p-1">
+                <p class='col-12' style='text-shadow: 1px 1px #696969; font-size: 2em'>Monitor and track your beehive
+                  conditions<br /> important to bee’s “well being” and optimal<br /> honey production.</p>
               </div>
               <br />
               <br />
