header mobile change

--- a/index.html
+++ b/index.html
@@ -59,12 +59,13 @@
       <div class="container-fluid section-one">
         <div class="container-fluid p-4">
           <div class="row">
-            <div class="col-sm-10 col-12">
+            <div class="col-sm-10 col-12 header-text">
               <h1 style='text-shadow: 2px 1px #696969'><strong>Beehive With Digital Eyes And Ears That
                   Works!</strong></h1>
               <br />
               <div class="col-md-8 p-1">
-                <p class='col-12' style='text-shadow: 1px 1px #696969; font-size: 2em'>Monitor and track your beehive
+                <p class='col-12' style='text-shadow: 1px 1px #696969; font-size: 2em'>Monitor and track
+                  your beehive
                   conditions<br /> important to bee’s “well being” and optimal<br /> honey production.</p>
               </div>
               <br />
