--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <img class="img-fluid cih aboutus-img" alt='notifications' src='./images/sec2-2.png' />
               <br />
               <p style="text-align: justify">
-                It’s connectivity trough Wi-Fi and GSM protocols enables real time monitoring capabilities so modern
+                It’s connectivity trough Wi-Fi and GSM protocols enables real time monitoring capabilities so
                 beekeepers are able to optimize their operations, decrease costs and reduce colony loses (!).
               </p>
             </div>
