--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Welcome to haBEEtat</title>
-  <meta name="description" content="haBEEtat Landing">
+  <title>Welcome to habeetat</title>
+  <meta name="description" content="Welcome to habeetat">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="stylesheet" href="./index.css" />
@@ -87,7 +87,7 @@
               <img class="img-fluid cih aboutus-img" alt='beehive' src="./images/sec2-1.png" />
               <br />
               <p style="text-align: justify">
-                haBEEtat “Smart Frame” is first adjustable hardware component design for standard Longhorne beehive
+                Habeetat “Smart Frame” is first adjustable hardware component design for standard Longhorne beehive
                 integrated with web and mobile app that provide beekeepers with most important data points inside a
                 single beehive.
               </p>
@@ -121,7 +121,7 @@
               <img class="img-fluid cih aboutus-img" alt='beekeeper' src='./images/sec2-4.png' />
               <br />
               <p style="text-align: justify">
-                Regardless if you are just new or proven beekeeper, haBEEtat is an open online community which help you
+                Regardless if you are just new or proven beekeeper, habeetat is an open online community which help you
                 to
                 connect with other beekeepers, exchange experiences and best practices.
               </p>
@@ -133,16 +133,16 @@
     <div class="container-fluid section-three" style="max-width: 1200px;">
       <div class="row">
         <div class="col-3 tac">
-          <img class="img-fluid bee-img" alt='bee' src='./images/homebee.png' />
+          <!-- <img class="img-fluid bee-img" alt='bee' src='./images/homebee.png' /> -->
         </div>
         <div class="col-3 tac">
           <img class="img-fluid bee-img" alt='bee' src='./images/homebee.png' />
         </div>
         <div class="col-3 tac">
-          <img class="img-fluid bee-img" alt='bee' src='./images/homebee.png' />
+          <!-- <img class="img-fluid bee-img" alt='bee' src='./images/homebee.png' /> -->
         </div>
         <div class="col-3 tac">
-          <img class="img-fluid bee-img" alt='bee' src='./images/homebee.png' />
+          <!-- <img class="img-fluid bee-img" alt='bee' src='./images/homebee.png' /> -->
         </div>
       </div>
       <br />
@@ -154,7 +154,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-4 col-12">
-              <img class="img-fluid device" style="margin-top:4em" alt='device' src='./images/haBEEtat-device-new.jpg' />
+              <img class="img-fluid device" style="margin-top:4em" alt='device' src='./images/habeetat-device-new.jpg' />
             </div>
             <div class="col-md-8 col-xs-12">
               <h2 class='tac' style="color: #000">ha<span style="color:#ffc107">bee</span>tat smart frame</h2>
@@ -162,13 +162,13 @@
               <p style="text-align: justify">Core of HABBETAT solution is fully integrated hardware and software
                 beehive system for digital beekeeping in 21st century. Its aim is to fully track all vital health and
                 productivity metrics of bee colony. Once installed on your standard Longhorne beehive and activated,
-                haBEEtat “Smart Frame” measures and stores all key data points such as: temperature, humidity and
-                unlike any other solutions, individual frame weight. With haBEEtat “Smart Frame” you can convert
-                traditional Longhorne beehives into smart beehive instantly. haBEEtat is first technical solution that
+                habeetat “Smart Frame” measures and stores all key data points such as: temperature, humidity and
+                unlike any other solutions, individual frame weight. With habeetat “Smart Frame” you can convert
+                traditional Longhorne beehives into smart beehive instantly. Habeetat is first technical solution that
                 provides single frame measurement and data collection.
                 <br />
                 <br />
-                haBEEtat mission is to enable more efficient honey production and improve well-being of bees population
+                Habeetat mission is to enable more efficient honey production and improve well-being of bees population
                 by creating first centralized online platform for worlds beekeepers interoperable with hardware
                 component (smart i-beehive) through real time monitoring and data analysis. Our core objective is to
                 offer technology solution accessible to wide audience and demographics, especially targeting younger
@@ -189,10 +189,10 @@
           <img class="img-fluid bee-img " alt='bee' src='./images/homebee.png' />
         </div>
         <div class="col-3">
-          <img class="img-fluid bee-img" alt='bee' src='./images/homebee.png' />
+          <!-- <img class="img-fluid bee-img" alt='bee' src='./images/homebee.png' /> -->
         </div>
         <div class="col-3 offset-3">
-          <img class="img-fluid bee-img float-right" alt='bee' src='./images/homebee.png' />
+          <!-- <img class="img-fluid bee-img float-right" alt='bee' src='./images/homebee.png' /> -->
         </div>
       </div>
       <br />
@@ -232,10 +232,10 @@
         <h4 class='tac'>Instant access to your data & measurements whenever you need them!</h4>
         <div class="row">
           <div class="col-2">
-            <img class="img-fluid bee-img" alt='bee' src='./images/homebee.png' />
+            <!-- <img class="img-fluid bee-img" alt='bee' src='./images/homebee.png' /> -->
           </div>
           <div class="col-2 offset-8">
-            <img class="img-fluid bee-img float-right" alt='bee' src='./images/homebee.png' />
+            <!-- <img class="img-fluid bee-img float-right" alt='bee' src='./images/homebee.png' /> -->
           </div>
           <div class="col-6">
             <img class="img-fluid float-right" alt='android download' src='./images/androidimg.png' />
@@ -244,7 +244,7 @@
             <img class="img-fluid" alt='ios download' src='./images/iosimg.png' />
           </div>
           <div class="col-2">
-            <img class="img-fluid bee-img" alt='bee' src='./images/homebee.png' />
+            <!-- <img class="img-fluid bee-img" alt='bee' src='./images/homebee.png' /> -->
           </div>
           <div class="col-2 offset-8">
             <img class="img-fluid bee-img float-right" alt='bee' src='./images/homebee.png' />
