--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
               <img class="img-fluid device" style="margin-top:4em" alt='device' src='./images/habeetat-device-new.jpg' />
             </div>
             <div class="col-md-8 col-xs-12">
-              <h2 class='tac' style="color: #000">ha<span style="color:#ffc107">bee</span>tat smart frame</h2>
+              <h2 class='tac' style="color: #000">Ha<span style="color:#ffc107">bee</span>tat smart frame</h2>
               <br />
               <p style="text-align: justify">Core of HABBETAT solution is fully integrated hardware and software
                 beehive system for digital beekeeping in 21st century. Its aim is to fully track all vital health and
