--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <div class="col-md-8 col-xs-12">
               <h2 class='tac' style="color: #000">Ha<span style="color:#ffc107">bee</span>tat smart frame</h2>
               <br />
-              <p style="text-align: justify">Core of HABBETAT solution is fully integrated hardware and software
+              <p style="text-align: justify">Core of habeetat solution is fully integrated hardware and software
                 beehive system for digital beekeeping in 21st century. Its aim is to fully track all vital health and
                 productivity metrics of bee colony. Once installed on your standard Longhorne beehive and activated,
                 habeetat “Smart Frame” measures and stores all key data points such as: temperature, humidity and
