change header text, and make it visible on mobile

--- a/index.html
+++ b/index.html
@@ -59,24 +59,28 @@
     </header>
     <div id="aboutus" class="element">
       <div class="container-fluid section-one">
-        <div class="container-fluid p-4">
+        <div class="container-fluid p-2">
           <div class="row">
-            <div class="col-sm-10 col-12 header-text">
-              <h1 style='text-shadow: 2px 1px #696969'><strong>Beehive With Digital Eyes And Ears That
-                  Works!</strong></h1>
-              <br />
+            <div class="col-sm-10 col-12 header-title">
+              <h1><strong>Make your beehive smart!</strong></h1>
               <div class="col-md-8 p-1">
-                <p class='col-12' style='text-shadow: 1px 1px #696969; font-size: 2em'>Monitor and track
-                  your beehive
-                  conditions<br /> important to bee’s “well being” and optimal<br /> honey production.</p>
+                <p class="col-12" class="header-subtitle">Monitor and track key metrics in a real time.</p>
               </div>
-              <br />
-              <br />
-              <button style='position: absolute; bottom: -2rem' class="btn btn-warning">PREORDER NOW
+              <button class="btn btn-warning preorder-button">PREORDER NOW
               </button>
             </div>
           </div>
         </div>
+      </div>
+    </div>
+    <div class="header-section-mobile">
+      <div class="col-12 header-title-mobile">
+        <h1><strong>Make your beehive smart!</strong></h1>
+        <div class="col-12 p-1">
+          <p class="col-12" class="header-subtitle-mobile">Monitor and track key metrics in a real time.</p>
+        </div>
+        <button class="btn btn-warning preorder-button">PREORDER NOW
+        </button>
       </div>
     </div>
     <div class="home-container">
