fix the 4 columns section, and make the frame image bigger

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
       <div class="container-fluid section-one">
         <div class="container-fluid p-2">
           <div class="row">
-            <div class="col-sm-10 col-12 header-title">
-              <h1><strong>Make your beehive smart!</strong></h1>
-              <div class="col-md-8 p-1">
-                <p class="col-12" class="header-subtitle">Monitor and track key metrics in a real time.</p>
+            <div class="col-sm-10 col-12 header-section">
+              <h1 class="header-title"><strong>Make your <span>beehive</span> smart!</strong></h1>
+              <div class="col-md-8 p-1 header-subtitle">
+                <p class="col-12">Monitor and track key metrics in a real time.</p>
               </div>
               <button class="btn btn-warning preorder-button">PREORDER NOW
               </button>
@@ -79,7 +79,7 @@
         <div class="col-12 p-1">
           <p class="col-12" class="header-subtitle-mobile">Monitor and track key metrics in a real time.</p>
         </div>
-        <button class="btn btn-warning preorder-button">PREORDER NOW
+        <button class="btn btn-warning">PREORDER NOW
         </button>
       </div>
     </div>
@@ -87,50 +87,71 @@
       <div class="container-fluid section-two">
         <div class="container">
           <div class="row">
-            <div class="col-md-3 col-sm-6 col-12">
-              <h4 class="tac">Hardware & Data</h4>
+            <div class="col-md-6 col-sm-12 col-12">
+              <h2 class="tac">Challenge</h2>
               <br />
-              <img class="img-fluid cih aboutus-img" alt='beehive' src="./images/sec2-1.png" />
-              <br />
-              <p style="text-align: justify">
-                Habeetat “Smart Frame” is first adjustable hardware component design for standard Longhorne beehive
-                integrated with web and mobile app that provide beekeepers with most important data points inside a
-                single beehive.
-              </p>
+			  <img class="img-fluid cih aboutus-img" alt='beehive' src="./images/sec2-1.png" />
+			  <br />
+              <ul class="list-container">
+                <li>Bees are dying rapidly</li>
+                <li>Traditional beekeeping has no practice of data collection for further analysis or future use</li>
+                <li>Estimated 50 million active beehives in the world (90% are Longhorn model)</li>
+                <li>Community with minimal knowledge transfer and experience shearing</li>
+                <li>How to transition from traditional beekeeping into data driven methodologies</li>
+              </ul>
             </div>
-            <div class="col-md-3 col-sm-6 col-12">
-              <h4 class="tac">Notifications</h4>
+            <div class="col-md-6 col-sm-12 col-12">
+              <h2 class="tac">Solution</h2>
               <br />
-              <img class="img-fluid cih aboutus-img" alt='notifications' src='./images/sec2-2.png' />
-              <br />
-              <p style="text-align: justify">
-                It’s connectivity trough Wi-Fi and GSM protocols enables real time monitoring capabilities so
-                beekeepers are able to optimize their operations, decrease costs and reduce colony loses (!).
-              </p>
+			  <img class="img-fluid cih aboutus-img" alt='notifications' src='./images/sec2-2.png' />
+			  <br />
+              <ul class="list-container">
+                <li>Habeetat “Smart Frame“ is adjustable hardware component designed for Longhorn beehives, embedded with sensors that collect, store and transfer data to web and mobile application in real time</li>
+				<li>Uniquely implemented solution that measure all key data points:
+					<ul>
+						<li>Beehive single frame weight (no other solution can do)</li>
+						<li>Beehive collective weight (sum of all frames weight values)</li>
+						<li>Inside/outside temperature</li>
+						<li>Inside/outside humidity</li>
+					</ul>
+				</li>
+				<li>“Smart Frame“ is designed not to be harmful or impactful in any way to bee colonies (true eco product)</li>
+				<li>Solution has been tested and proven in real life conditions in collaboration with professional beekeepers</li>
+              </ul>
             </div>
             <br />
             <br />
-            <div class="col-md-3 col-sm-6 col-12">
-              <h4 class="tac">Inspection</h4>
+            <div class="col-md-6 col-sm-12 col-12">
+              <h2 class="tac mt-4">Benefits</h2>
               <br />
               <img class="img-fluid cih aboutus-img" alt='honeycomb' src='./images/sec2-3.png' />
               <br />
-              <p style="text-align: justify">
-                Inspect your beehives and save images of each frame using our mobile app. Get insight of how your
-                colonies are developing
-                through time.
-              </p>
+              <ul class="list-container">
+                <li>Real time data monitoring enables beekeepers to optimize their day-2-day operations, making the entire process far more efficient</li>
+				<li>With “early-warning” notifications, beekeepers can:
+					<ul>
+						<li>Decrease costs of operation</li>
+						<li>Reduce colony loses</li>
+						<li>Detect bee diseases</li>
+						<li>Improve well-being of bee population</li>
+						<li>Reduces the honey losses and waste</li>
+					</ul>
+				</li>
+				<li>Promoting beekeeping as more accessible to the general population by introducing “simple to use” app driven methodologies</li>
+				<li>Key data is analyzed and visually presented</li>
+				<li>Small switching costs, solution works as add on to existing set up</li>
+				<li>Prediction modeling based on big data analysis on platform level</li>
+				<li>Beekeepers social community interactions and knowledge exchange</li>
+				</ul>
             </div>
-            <div class="col-md-3 col-sm-6 col-12">
-              <h4 class="tac">Community</h4>
+            <div class="col-md-6 col-sm-12 col-12">
+              <h2 class="tac mt-4">Mission</h2>
               <br />
               <img class="img-fluid cih aboutus-img" alt='beekeeper' src='./images/sec2-4.png' />
               <br />
-              <p style="text-align: justify">
-                Regardless if you are just new or proven beekeeper, habeetat is an open online community which help you
-                to
-                connect with other beekeepers, exchange experiences and best practices.
-              </p>
+              <ul class="list-container">
+                <li>Regardless if you proven beekeeper or just starting, habeetat is an open online community that helps you to connect with other beekeepers, interact and exchange experiences and best practices</li>
+			  </ul>
             </div>
           </div>
         </div>
@@ -151,37 +172,38 @@
           <!-- <img class="img-fluid bee-img" alt='bee' src='./images/homebee.png' /> -->
         </div>
       </div>
-      <br />
-      <br />
-      <br />
     </div>
     <div id="product" class="element">
       <div class="container-fluid section-four" style="max-width: 1200px;">
         <div class="container">
           <div class="row">
-            <div class="col-md-4 col-12">
-              <img class="img-fluid device" style="margin-top:4em" alt='device' src='./images/habeetat-device-new.jpg' />
+			  <div class="col-12">
+					<h1 class="tac mb-5" style="color: #333">ha<span style="color:#ffc107">bee</span>tat smart frame</h1>
+			  </div>
+            <div class="col-md-12 col-lg-9 col-12">
+              <img class="img-fluid device" alt='device' src='./images/habeetat-device-new.jpg' />
             </div>
-            <div class="col-md-8 col-xs-12">
-              <h2 class='tac' style="color: #000">ha<span style="color:#ffc107">bee</span>tat smart frame</h2>
-              <br />
-              <p style="text-align: justify">Core of habeetat solution is fully integrated hardware and software
-                beehive system for digital beekeeping in 21st century. Its aim is to fully track all vital health and
-                productivity metrics of bee colony. Once installed on your standard Longhorne beehive and activated,
-                habeetat “Smart Frame” measures and stores all key data points such as: temperature, humidity and
-                unlike any other solutions, individual frame weight. With habeetat “Smart Frame” you can convert
-                traditional Longhorne beehives into smart beehive instantly. Habeetat is first technical solution that
-                provides single frame measurement and data collection.
-                <br />
-                <br />
-                Habeetat mission is to enable more efficient honey production and improve well-being of bees population
-                by creating first centralized online platform for worlds beekeepers interoperable with hardware
-                component (smart i-beehive) through real time monitoring and data analysis. Our core objective is to
-                offer technology solution accessible to wide audience and demographics, especially targeting younger
-                generations initiating their interest in beekeeping activities. We strive to promote new perspective to
-                traditional beekeeping by introducing first mobile application and fully integrated web solution.
-                Hardware component together with online applications, both for web and mobile, are created to be
-                extremely simple to use and user friendly</p>
+            <div class="col-md-12 col-lg-3">
+				<div class="align-baseline">
+					<p style="text-align: justify">
+						Up to now, primary way of producing honey relied heavily on the experience 
+						and “gut feeling” of the individual beekeepers, utilizing traditional agricultural methods of placing 
+						the hives at a locations that are believed to be most suitable for higher honey gain. Additionally, 
+						data collected through its utilization is rarely recorded for future use and analysis.
+					</p>
+					<div>
+						<img class="img-fluid bee-img johnCena" alt='bee' src='./images/homebee.png' />
+					</div>
+				</div>
+			</div>
+			<div class="col-12">
+			  <p  style="text-align: justify">
+					HaBEEtat aims to change that. It’s core mission is to enable more efficient honey production and 
+					improve the well-being of bees, by creating first integrated online platform for beekeepers, 
+					enabling real time monitoring and data driven analysis and prediction modeling. With a such 
+					approach, beekeeping will become more accessible to wider audience and demographics, in particular 
+					younger generations, reigniting their interest for beekeeping. Habeetat mission is to create the 
+					first data driven social platform for world’s beekeepers.</p>
               <br />
               <!-- <button class="btn btn-warning">OPEN GALLERY</button> -->
             </div>
