--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 						<li>Inside/outside humidity</li>
 					</ul>
 				</li>
-				<li>“Smart Frame“ is designed not to be harmful or impactful in any way to bee colonies (true eco product)</li>
+				<li>“Smart Frame“ is specifically designed not to be harmful or impactful in any way to bee colonies (true eco product)</li>
 				<li>Solution has been tested and proven in real life conditions in collaboration with professional beekeepers</li>
               </ul>
             </div>
