--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </button>
           </div>
           <div class="modal-body">
-              <p>Habeetat will notify you when product is ready to ship</p>
+              <p>Habeetat will send you notification when product is ready to ship.</p>
               <form>
                   <div class="form-group">
                     <label for="exampleInputEmail1">Email address</label>
