--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
 					<p style="text-align: justify">
 						Up to now, primary way of producing honey relied heavily on the experience 
 						and “gut feeling” of the individual beekeepers, utilizing traditional agricultural methods of placing 
-						the hives at a locations that are believed to be most suitable for higher honey gain. Additionally, 
-						data collected through its utilization is rarely recorded for future use and analysis.
+						the hives at a locations that are believed to be most suitable. Additionally, 
+						data collected is rarely recorded for future use and analysis.
 					</p>
 					<div>
 						<img class="img-fluid bee-img johnCena" alt='bee' src='./images/homebee.png' />
