--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Welcome to habeetat</title>
   <meta name="description" content="Welcome to habeetat">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" type="image/png" href="/images/logoheadersmall.png"/>
+  <link rel="shortcut icon" type="image/png" href="./images/habeetat.ico"/>
 
   <link rel="stylesheet" href="./index.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
@@ -67,6 +67,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="ml-auto navbar-nav">
+            <li class="nav-item">
+                <button type="button" class="btn btn-warning preorder-button m-0" data-toggle="modal" data-target="#exampleModal">
+                    PREORDER NOW
+                </button>
+            </li>
             <li class="nav-item active">
               <a class="nav-link aboutus-link" data-toggle="collapse" data-target=".navbar-collapse.show">About us
                 <span class="sr-only">(current)</span>
@@ -77,11 +82,6 @@
             </li>
             <li class="nav-item">
               <a class="nav-link apps-link" data-toggle="collapse" data-target=".navbar-collapse.show" href="#">Apps</a>
-            </li>
-            <li class="nav-item">
-                <button type="button" class="btn btn-warning preorder-button m-0" data-toggle="modal" data-target="#exampleModal">
-                    PREORDER NOW
-                </button>
             </li>
             <li class="nav-item">
               <a class="nav-link" target="_blank" href="https://dev.habeetat.io/login">Login</a>
@@ -128,11 +128,11 @@
 			  <img class="img-fluid cih aboutus-img" alt='beehive' src="./images/sec2-1.png" />
 			  <br />
               <ul class="list-container">
-                <li>Bees are dying rapidly</li>
-                <li>Traditional beekeeping has no practice of collecting data for further analysis or future use</li>
-                <li>Estimated 50 million active beehives in the world (90% are Longhorn model)</li>
-                <li>Community with minimal knowledge transfer and experience shearing</li>
-                <li>How to transition from traditional beekeeping into data driven methodologies</li>
+                <li>Bees are dying rapidly,</li>
+                <li>Traditional beekeeping has no practice of collecting data for further analysis or future use,</li>
+                <li>Estimated 50 million active beehives in the world (90% are Longhorn model),</li>
+                <li>Community with minimal knowledge transfer and experience shearing,</li>
+                <li>How to transition from traditional beekeeping into data driven methodologies.</li>
               </ul>
             </div>
             <div class="col-md-6 col-sm-12 col-12">
@@ -141,51 +141,51 @@
 			  <img class="img-fluid cih aboutus-img" alt='notifications' src='./images/sec2-2.png' />
 			  <br />
               <ul class="list-container">
-                <li>Habeetat “Smart Frame“ is adjustable hardware component designed for Longhorn beehives, embedded with sensors that collect, store and transfer data to web and mobile application in real time</li>
+                <li>Habeetat “Smart Frame“ is adjustable hardware component designed for Longhorn beehives, embedded with sensors that collect, store and transfer data to web and mobile application in real time,</li>
 				<li>Uniquely implemented solution that measure all key data points:
 					<ul>
-						<li>Beehive single frame weight (no other solution can do)</li>
-						<li>Beehive collective weight (sum of all frames weight values)</li>
-						<li>Inside/outside temperature</li>
-						<li>Inside/outside humidity</li>
+						<li>Beehive single frame weight (no other solution can do),</li>
+						<li>Beehive collective weight (sum of all frames weight values),</li>
+						<li>Inside/outside temperature,</li>
+						<li>Inside/outside humidity.</li>
 					</ul>
 				</li>
-				<li>“Smart Frame“ is specifically designed not to be harmful or impactful in any way to bee colonies (true eco product)</li>
-				<li>Solution has been tested and proven in real life conditions in collaboration with professional beekeepers</li>
+				<li>“Smart Frame“ is specifically designed not to be harmful or impactful in any way to bee colonies (true eco product),</li>
+				<li>Solution has been tested and proven in real life conditions in collaboration with professional beekeepers.</li>
               </ul>
             </div>
             <br />
             <br />
             <div class="col-md-6 col-sm-12 col-12">
-              <h2 class="tac mt-4">Benefits</h2>
+              <h2 class="tac spread">Benefits</h2>
               <br />
               <img class="img-fluid cih aboutus-img" alt='honeycomb' src='./images/sec2-3.png' />
               <br />
               <ul class="list-container">
-                <li>Real time data monitoring enables beekeepers to optimize their day-2-day operations, making the entire process far more efficient</li>
+                <li>Real time data monitoring enables beekeepers to optimize their day-2-day operations, making the entire process far more efficient,</li>
 				<li>With “early-warning” notifications, beekeepers can:
 					<ul>
-						<li>Decrease costs of operation</li>
-						<li>Reduce colony loses</li>
-						<li>Detect bee diseases</li>
-						<li>Improve well-being of bee population</li>
-						<li>Reduces the honey losses and waste</li>
+						<li>Decrease costs of operation,</li>
+						<li>Reduce colony loses,</li>
+						<li>Detect bee diseases,</li>
+						<li>Improve well-being of bee population,</li>
+						<li>Reduces the honey losses and waste.</li>
 					</ul>
 				</li>
-				<li>Promoting beekeeping as more accessible to the general population by introducing “simple to use” app driven methodologies</li>
-				<li>Key data is analyzed and visually presented</li>
-				<li>Small switching costs, solution works as add on to existing set up</li>
-				<li>Prediction modeling based on big data analysis on platform level</li>
-				<li>Beekeepers social community interactions and knowledge exchange</li>
+				<li>Promoting beekeeping as more accessible to the general population by introducing “simple to use” app driven methodologies,</li>
+				<li>Key data is analyzed and visually presented,</li>
+				<li>Small switching costs, solution works as add on to existing set up,</li>
+				<li>Prediction modeling based on big data analysis on platform level,</li>
+				<li>Beekeepers social community interactions and knowledge exchange.</li>
 				</ul>
             </div>
             <div class="col-md-6 col-sm-12 col-12">
-              <h2 class="tac mt-4">Mission</h2>
+              <h2 class="tac spread">Mission</h2>
               <br />
               <img class="img-fluid cih aboutus-img" alt='beekeeper' src='./images/sec2-4.png' />
               <br />
               <ul class="list-container">
-                <li>Regardless if you proven beekeeper or just starting, habeetat is an open online community that helps you to connect with other beekeepers, interact and exchange experiences and best practices</li>
+                <li>Regardless if you proven beekeeper or just starting, habeetat is an open online community that helps you to connect with other beekeepers, interact and exchange experiences and best practices.</li>
 			  </ul>
             </div>
           </div>
